ocaml/testsuite/tests/typing-layouts-products/parsing_unary_term.compilers.reference
File "parsing_unary_term.ml", line 11, characters 12-13:
11 | let x = #(42)
                 ^
Error: Syntax error
